--- a/Linear_Regression_From_Ground_Up.ipynb
+++ b/Linear_Regression_From_Ground_Up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMlCF0PB/ibfmkq1ZNgJK/A",
+      "authorship_tag": "ABX9TyNQ2CNGcYkIzEgaBMP6MkgY",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +28,53 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "ChsBxHA8YsD7"
       },
       "outputs": [],
-      "source": []
+      "source": [
+        "import numpy as np"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lst = np.arange(1, 10, 0.2)\n",
+        "lst"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "xqIkEjduamX6",
+        "outputId": "881bd2c4-c876-4508-a916-b9a57a61ae12"
+      },
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "array([1. , 1.2, 1.4, 1.6, 1.8, 2. , 2.2, 2.4, 2.6, 2.8, 3. , 3.2, 3.4,\n",
+              "       3.6, 3.8, 4. , 4.2, 4.4, 4.6, 4.8, 5. , 5.2, 5.4, 5.6, 5.8, 6. ,\n",
+              "       6.2, 6.4, 6.6, 6.8, 7. , 7.2, 7.4, 7.6, 7.8, 8. , 8.2, 8.4, 8.6,\n",
+              "       8.8, 9. , 9.2, 9.4, 9.6, 9.8])"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 3
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "p08XXFqLatDp"
+      },
+      "execution_count": null,
+      "outputs": []
     }
   ]
 }
