--- a/kNN_From_Ground_Up.ipynb
+++ b/kNN_From_Ground_Up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyONXdqfqsBQVwUbox7H+YQZ",
+      "authorship_tag": "ABX9TyNjeYCL04jMKS7xQ9sW8rLB",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -44,26 +44,47 @@
       "cell_type": "code",
       "source": [
         "# kNN can be used for both classification and regression problems. We will implement both.\n",
-        "# In both the cases, the concept is same, you find 'k' similar nearest neighbours using eucledian\n",
-        "# distance and get the average value of the labels of those 'k' similar features.\n",
+        "# In both the cases, the concept is same, you find 'k' nearest neighbours to the feature vector that we want to predict using eucledian\n",
+        "# distance and get the average value of the labels of those 'k' neighbours.\n",
         "\n",
         "# I already figured out *i think* the algorithm in my head during the IT seminar class\n",
         "# now just need to implement it.\n",
         "# Create an array of k elements, insert the first k element's distance to dataset into it\n",
-        "# Sort it\n",
-        "# Then, pick another data example, compute the distance\n",
+        "# Sort it in descending order\n",
+        "# Then, pick another data example, compute the distance of the example with the feature vector that we want to predict.\n",
+        "# If this distance is less than the first distance value in the array, replace that position in the array with this.\n",
+        "# Resort the array in descending order.\n",
+        "# Repeat until you have gone through the entire dataset.\n",
+        "\n",
         "class kNN_Model():\n",
         "  def __init__(self, k):\n",
         "    self.k = k\n",
         "    self.neighbours = []\n",
         "\n",
-        "  def predict():\n",
-        "    pass"
+        "  def predict_regression(self, data_feature_vectors, data_labels, target_feature):\n",
+        "    for i in range(0, self.k):\n",
+        "      self.neighbours.append(data_feature_vectors[i])\n",
+        "\n",
+        "    # Sort the list in descending order by the distance between the feature vectors and the target feature\n",
+        "    self.neighbours.sort(key=lambda x: np.linalg.norm(x - target_feature), reverse=True)\n",
+        "\n",
+        "    dataset_size = len(data_feature_vectors)\n",
+        "    for i in range(self.k-1, dataset_size):\n",
+        "      pass"
       ],
       "metadata": {
         "id": "ossF7kITnn-k"
       },
-      "execution_count": 2,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [],
+      "metadata": {
+        "id": "hOo1wxvXKLsa"
+      },
+      "execution_count": null,
       "outputs": []
     }
   ]
