--- a/kNN_From_Ground_Up.ipynb
+++ b/kNN_From_Ground_Up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjeYCL04jMKS7xQ9sW8rLB",
+      "authorship_tag": "ABX9TyME1MC9ZPA9poTrtdTwr7qk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -70,12 +70,19 @@
         "\n",
         "    dataset_size = len(data_feature_vectors)\n",
         "    for i in range(self.k-1, dataset_size):\n",
-        "      pass"
+        "      dist1 = np.linalg.norm(data_feature_vectors[i] - target_feature)\n",
+        "      dist2 = np.linalg.norm(self.neighbours[0] - target_feature)\n",
+        "\n",
+        "      if dist1 < dist2:\n",
+        "        self.neighbours[0] = data_feature_vectors[i]\n",
+        "        # Re-sort\n",
+        "        self.neighbours.sort(key=lambda x: np.linalg.norm(x - target_feature), reverse=True)\n",
+        ""
       ],
       "metadata": {
         "id": "ossF7kITnn-k"
       },
-      "execution_count": 6,
+      "execution_count": 2,
       "outputs": []
     },
     {
