--- a/kNN_From_Ground_Up.ipynb
+++ b/kNN_From_Ground_Up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyME1MC9ZPA9poTrtdTwr7qk",
+      "authorship_tag": "ABX9TyM4MK2hDBXKCBwvVjmEsOBs",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -61,28 +61,44 @@
         "    self.k = k\n",
         "    self.neighbours = []\n",
         "\n",
-        "  def predict_regression(self, data_feature_vectors, data_labels, target_feature):\n",
+        "  def __repr__(self):\n",
+        "    return self.neighbours\n",
+        "\n",
+        "  def predict_regression(self, feature_and_label_vectors, target_feature):\n",
+        "    # TODO: append feature and label vectors together\n",
+        "\n",
         "    for i in range(0, self.k):\n",
-        "      self.neighbours.append(data_feature_vectors[i])\n",
+        "      self.neighbours.append(feature_and_label_vectors[i])\n",
         "\n",
         "    # Sort the list in descending order by the distance between the feature vectors and the target feature\n",
-        "    self.neighbours.sort(key=lambda x: np.linalg.norm(x - target_feature), reverse=True)\n",
         "\n",
-        "    dataset_size = len(data_feature_vectors)\n",
+        "    self.neighbours.sort(key=lambda x: np.linalg.norm(x[:-1] - target_feature), reverse=True)\n",
+        "\n",
+        "    dataset_size = len(feature_and_label_vectors)\n",
         "    for i in range(self.k-1, dataset_size):\n",
-        "      dist1 = np.linalg.norm(data_feature_vectors[i] - target_feature)\n",
-        "      dist2 = np.linalg.norm(self.neighbours[0] - target_feature)\n",
+        "      dist1 = np.linalg.norm(feature_and_label_vectors[i][:-1] - target_feature)\n",
+        "      dist2 = np.linalg.norm(self.neighbours[0][:-1] - target_feature)\n",
         "\n",
         "      if dist1 < dist2:\n",
-        "        self.neighbours[0] = data_feature_vectors[i]\n",
+        "        self.neighbours[0] = feature_and_label_vectors[i]\n",
         "        # Re-sort\n",
         "        self.neighbours.sort(key=lambda x: np.linalg.norm(x - target_feature), reverse=True)\n",
+        "\n",
+        "    # Calculate the average of those labels\n",
+        "    average = 0\n",
+        "    for i in range(0, self.k):\n",
+        "      feature_and_label_vector = self.neighbours[i]\n",
+        "      label = feature_and_label_vector[-1]\n",
+        "      average += label\n",
+        "\n",
+        "    prediction = average / self.k\n",
+        "    return prediction\n",
         ""
       ],
       "metadata": {
         "id": "ossF7kITnn-k"
       },
-      "execution_count": 2,
+      "execution_count": 5,
       "outputs": []
     },
     {
