--- a/kNN_From_Ground_Up.ipynb
+++ b/kNN_From_Ground_Up.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOknlZGU9kS/p7KNNwNWpKs",
+      "authorship_tag": "ABX9TyMwAQrBO52mR4Lh7doSWPOM",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,7 +28,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 8,
       "metadata": {
         "id": "gIJ8QFK_nc_7"
       },
@@ -37,7 +37,8 @@
         "# Implementing k-Nearest-Neighbours from the ground up\n",
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
-        "%matplotlib inline"
+        "%matplotlib inline\n",
+        "from collections import Counter"
       ]
     },
     {
@@ -48,7 +49,6 @@
         "# distance and get the average value of the labels of those 'k' neighbours.\n",
         "\n",
         "# I figured out this algorithm in my head during an IT seminar class so dont expect it to be perfect.\n",
-        "# now just need to implement it.\n",
         "# Create an array of k elements, insert the first k element's distance to dataset into it\n",
         "# Sort it in descending order\n",
         "# Then, pick another data example, compute the distance of the example with the feature vector that we want to predict.\n",
@@ -65,9 +65,7 @@
         "  def __repr__(self):\n",
         "    return self.neighbours\n",
         "\n",
-        "  def predict_regression(self, feature_and_label_vectors, target_feature):\n",
-        "    # TODO: append feature and label vectors together\n",
-        "\n",
+        "  def find_nearest_neighbours(self, feature_and_label_vectors, target_feature):\n",
         "    for i in range(0, self.k):\n",
         "      self.neighbours.append(feature_and_label_vectors[i])\n",
         "\n",
@@ -89,7 +87,10 @@
         "      print(f'{self.k} nearest neighbours are: ')\n",
         "      print(self.neighbours)\n",
         "\n",
-        "    # Calculate the average of those labels\n",
+        "  def predict_regression(self, feature_and_label_vectors, target_feature):\n",
+        "    self.find_nearest_neighbours(feature_and_label_vectors, target_feature)\n",
+        "\n",
+        "    # Calculate the average label of those neighbours\n",
         "    average = 0\n",
         "    for i in range(0, self.k):\n",
         "      feature_and_label_vector = self.neighbours[i]\n",
@@ -97,24 +98,37 @@
         "      average += label[0]\n",
         "\n",
         "    prediction = average / self.k\n",
-        "    return prediction"
+        "    return prediction\n",
+        "\n",
+        "  def predict_class(self, feature_and_label_vectors, target_feature):\n",
+        "    self.find_nearest_neighbours(feature_and_label_vectors, target_feature)\n",
+        "\n",
+        "    # Get the most prevalent label of those neighbours\n",
+        "    labels = [self.neighbours[i][-1][0] for i in range(0, self.k)]\n",
+        "\n",
+        "    counter = Counter(labels)\n",
+        "    most_common_label, freq = counter.most_common(1)[0]\n",
+        "\n",
+        "    return most_common_label\n",
+        "\n",
+        ""
       ],
       "metadata": {
         "id": "ossF7kITnn-k"
       },
-      "execution_count": 64,
+      "execution_count": 42,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dataset = [[[1], [2]], [[2], [3]], [[3], [4]], [[4], [5]], [[5], [6]],  [[6], [7]], [[7], [8]], [[8], [9]]]\n",
-        "target_feature = [6.75]"
+        "dataset = [[[1], [1]], [[2], [0]], [[3], [1]], [[4], [0]], [[5], [1]],  [[6], [0]], [[7], [1]], [[8], [0]]]\n",
+        "target_feature = [9]"
       ],
       "metadata": {
         "id": "F71lZzkC49BI"
       },
-      "execution_count": 75,
+      "execution_count": 43,
       "outputs": []
     },
     {
@@ -127,72 +141,72 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "dFo3NZ86_sUY",
-        "outputId": "8f9f63de-903e-4012-bde0-f5cbacc0b1bf"
+        "outputId": "6808551c-4949-4733-c900-7e0de5d00cd1"
       },
-      "execution_count": 76,
+      "execution_count": 44,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "[[[1], [2]],\n",
-              " [[2], [3]],\n",
-              " [[3], [4]],\n",
-              " [[4], [5]],\n",
-              " [[5], [6]],\n",
-              " [[6], [7]],\n",
-              " [[7], [8]],\n",
-              " [[8], [9]]]"
+              "[[[1], [1]],\n",
+              " [[2], [0]],\n",
+              " [[3], [1]],\n",
+              " [[4], [0]],\n",
+              " [[5], [1]],\n",
+              " [[6], [0]],\n",
+              " [[7], [1]],\n",
+              " [[8], [0]]]"
             ]
           },
           "metadata": {},
-          "execution_count": 76
+          "execution_count": 44
         }
       ]
     },
     {
       "cell_type": "code",
       "source": [
-        "model = kNN_Model(2)\n",
+        "model = kNN_Model(3)\n",
         "model.show_neighbours = True"
       ],
       "metadata": {
         "id": "2ZKGnNLy--jy"
       },
-      "execution_count": 77,
+      "execution_count": 45,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "model.predict_regression(dataset, target_feature)"
+        "model.predict_class(dataset, target_feature)"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "mNyfR5ZYAgTK",
-        "outputId": "d08709c4-a0b5-4c10-f0f7-55ff8701c4bd"
+        "outputId": "3097d149-46e6-4934-ce00-d8218e922575"
       },
-      "execution_count": 78,
+      "execution_count": 46,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "2 nearest neighbours are: \n",
-            "[[[6], [7]], [[7], [8]]]\n"
+            "3 nearest neighbours are: \n",
+            "[[[6], [0]], [[7], [1]], [[8], [0]]]\n"
           ]
         },
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "7.5"
+              "0"
             ]
           },
           "metadata": {},
-          "execution_count": 78
+          "execution_count": 46
         }
       ]
     }
